<resources>
    <string name="app_name">ProgMob_Poject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_team_a">Team A Score</string>
    <string name="score_team_b">Team B Score</string>
    <string name="vs">VS</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="coordinates">Coordinates</string>
    <string name="date">Date :</string>
    <string name="picture">Picture</string>
    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="Add_new_Match">Add new Match</string>
    <string name="View_Matches">View Matches</string>
    <string name="Home">Home</string>
    <string name="Select_Match">Select match</string>
    <string name="landscape">Landscape Mode</string>
</resources>